fixes(clases): Cambios minimos
